[project]
name = "flash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christopher Smith", email = "christopher@onecodex.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
]

[project.scripts]
flash = "cli.flash:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
